<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_page"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_pump_setup_formula_formula" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:background="@drawable/spinner_background"
                android:id="@+id/spFormula"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_page"
                android:layout_weight="1" />

        </LinearLayout>

        <EditText
            android:inputType="text"
            android:background="@drawable/border_edittext"
            android:id="@+id/edtFormulaName"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/margin_page"
            android:layout_height="@dimen/height_layout_button_h4"
            android:layout_marginTop="@dimen/margin_page"
            android:text="Công thức 1" />

        <Button
            android:id="@+id/btAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_page"
            android:text="@string/bt_add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_page"
                android:layout_weight="1"
                android:text="@string/bt_Save" />

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_page"
                android:layout_weight="1"
                android:text="@string/bt_Cancel" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_page"
                    android:backgroundTint="@color/blackLight"
                    app:cardCornerRadius="@dimen/margin_page">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/margin_page"
                        android:paddingBottom="@dimen/margin_page">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/water_bucket" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/title_pump_setup_formula_water"
                                android:textSize="@dimen/text_size_h1"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/title_pump_setup_formula_rate"></TextView>

                                <EditText
                                    android:id="@+id/edtRateWater"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/margin_page"
                                    android:layout_weight="1"
                                    android:inputType="numberDecimal"
                                    android:text="80"
                                    android:textSize="@dimen/text_size_h0"
                                    android:textStyle="bold" />
                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_page"
                    android:backgroundTint="@color/blackLight"
                    app:cardCornerRadius="@dimen/margin_page">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/margin_page"
                        android:paddingBottom="@dimen/margin_page">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/chemical_bucket" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/title_pump_setup_formula_liquid_one"
                                android:textSize="@dimen/text_size_h1"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/title_pump_setup_formula_rate"></TextView>

                                <EditText
                                    android:id="@+id/edtLiquidOne"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/margin_page"
                                    android:layout_weight="1"
                                    android:inputType="numberDecimal"
                                    android:text="5"
                                    android:textSize="@dimen/text_size_h0"
                                    android:textStyle="bold" />
                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_page"
                    android:backgroundTint="@color/blackLight"
                    app:cardCornerRadius="@dimen/margin_page">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/margin_page"
                        android:paddingBottom="@dimen/margin_page">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/chemical_bucket" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/title_pump_setup_formula_liquid_two"
                                android:textSize="@dimen/text_size_h1"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/title_pump_setup_formula_rate"></TextView>

                                <EditText
                                    android:id="@+id/edtLiquidTwo"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/margin_page"
                                    android:layout_weight="1"
                                    android:inputType="numberDecimal"
                                    android:text="5"
                                    android:textSize="@dimen/text_size_h0"
                                    android:textStyle="bold" />
                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_page"
                    android:backgroundTint="@color/blackLight"
                    app:cardCornerRadius="@dimen/margin_page">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/margin_page"
                        android:paddingBottom="@dimen/margin_page">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/chemical_bucket" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/title_pump_setup_formula_liquid_three"
                                android:textSize="@dimen/text_size_h1"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/title_pump_setup_formula_rate"></TextView>

                                <EditText
                                    android:id="@+id/edtLiquidThree"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/margin_page"
                                    android:layout_weight="1"
                                    android:inputType="numberDecimal"
                                    android:text="5"
                                    android:textSize="@dimen/text_size_h0"
                                    android:textStyle="bold" />
                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_page"
                    android:backgroundTint="@color/blackLight"
                    app:cardCornerRadius="@dimen/margin_page">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/margin_page"
                        android:paddingBottom="@dimen/margin_page">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/chemical_bucket" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/title_pump_setup_formula_liquid_four"
                                android:textSize="@dimen/text_size_h1"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/title_pump_setup_formula_rate"></TextView>

                                <EditText
                                    android:id="@+id/edtLiquidFour"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/margin_page"
                                    android:layout_weight="1"
                                    android:inputType="numberDecimal"
                                    android:text="5"
                                    android:textSize="@dimen/text_size_h0"
                                    android:textStyle="bold" />
                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>