<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_page"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:backgroundTint="@color/blackLight"
            app:cardCornerRadius="@dimen/margin_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_page"
                android:paddingBottom="@dimen/margin_page"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/water_bucket" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:gravity="center"
                        android:textSize="@dimen/text_size_h3"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title_pump_setup_ph" />

                    <TextView
                        android:gravity="center"
                        android:id="@+id/tvDegreePH"
                        android:textSize="@dimen/layout_size_h4"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="7.0" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:backgroundTint="@color/blackLight"
            app:cardCornerRadius="@dimen/margin_page"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_page"
            android:layout_height="wrap_content">

            <LinearLayout
                android:paddingBottom="@dimen/margin_page"
                android:layout_marginTop="@dimen/margin_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/chemical_bucket" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:gravity="center"
                        android:textSize="@dimen/text_size_h3"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title_pump_setup_ec" />

                    <TextView
                        android:gravity="center"
                        android:id="@+id/tvDegreeEC"
                        android:textSize="@dimen/layout_size_h4"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0.1M" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:backgroundTint="@color/blackLight"
            app:cardCornerRadius="@dimen/margin_page"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_page"
            android:layout_height="wrap_content">

            <LinearLayout
                android:paddingBottom="@dimen/margin_page"
                android:layout_marginTop="@dimen/margin_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/clock" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:gravity="center"
                        android:textSize="@dimen/text_size_h3"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title_pump_setup_pressure" />

                    <TextView
                        android:gravity="center"
                        android:id="@+id/tvPressure"
                        android:textSize="@dimen/layout_size_h4"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1atm" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>